--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "bootstrap": "^5.2.3",
     "formik": "^2.2.9",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.2.3",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-player": "^2.12.0",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
     "reactjs-popup": "^2.0.5",
